package Practica1_ecommerce;

public abstract class Metodo_pago {
    public abstract void procesarPago(double importe);

}
